<resources>
    <string name="app_name" translatable="false">FlyList</string>
    <string name="refresh">Refresh</string>
    <string name="loading_data">Loading data…</string>
    <string name="an_error_occurred_while_loading_data">An error occurred while loading data.\nPlease try again.</string>
    <string name="filter">Filter</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="departure_time">Departure: %1$s</string>
    <string name="arrival_time">Arrival: %1$s</string>
    <string name="airline_logo">Airline logo</string>
    <string name="buy">Buy</string>
    <string name="flight_detail_title">Flight %1$s</string>
    <string name="icao">ICAO:</string>
    <string name="departure_airport">Departure airport:</string>
    <string name="plane_type">Plane type:</string>
    <string name="flight_title">Flight</string>
    <string name="plane_title">Plane</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="first_seen">First seen at:</string>
    <string name="last_seen">Last seen at:</string>
    <string name="arrival_airport">Arrival airport:</string>
    <string name="callsign">Callsign:</string>
    <string name="modes">Mode S:</string>
    <string name="owners">Owners:</string>
    <string name="flag_code">Flag code:</string>
    <string name="n_a" translatable="false">N/A</string>
    <string name="plane_icao">Type ICAO:</string>
    <string name="search">Search</string>
    <string name="beginning_date">Beginning date</string>
    <string name="ending_date">Ending date</string>
    <string name="all_flights">All Flights</string>
    <string name="by_aircraft">By Aircraft</string>
    <string name="dep_by_airport">Departures by Airport</string>
    <string name="arr_by_airport">Arrivals by Airport</string>
    <string name="mandatory_icao24">ICAO24 *</string>
    <string name="mandatory_airport">Airport codename *</string>
</resources>
